--- a/src/app/games/slot/slot.component.html
+++ b/src/app/games/slot/slot.component.html
@@ -1,1 +1,31 @@
-<p>slot works!</p>
+<!-- <div class="slot-machine">
+    <div class="reel" *ngFor="let reel of reels">
+      <div class="slot" *ngFor="let slot of reel.slots" [style.backgroundImage]="'url(' + slot + ')'"></div>
+    </div>
+    <button (click)="spin()" class="btn btn-primary">Spin</button>
+  </div> -->
+<!-- <div class="slot-machine">
+    <div class="reel">
+      <div class="slot" [ngStyle]="{ 'background-image': 'url(' + currentImage + ')' }"></div>
+    </div>
+  </div> -->
+  <h1 style="margin-bottom: 50px; text-align: center;">
+    MAQUINA TRAGAMONEDAS
+  </h1>
+<div class="slot-machine">
+    <div class="reel" *ngFor="let reel of reels">
+        <!-- class="slot"
+        [ngStyle]="{ 'background-image': 'url(' + reel.currentImage + ')' }" -->
+      <!-- <div class="slot"
+      > -->
+      <img class="slot" [src]="reel.currentImage" alt="">
+    <!-- </div> -->
+    </div>
+  </div>
+<div class="button-container ">
+
+    <button mat-flat-button color="accent" (click)="startSpinning()" [disabled]="start">
+       Girar
+    </button>
+    <button mat-flat-button color="warn" (click)="stopInterval()" [disabled]="!start">Detener</button>
+</div>
