--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,5 +3,5 @@
 @import './theme/theme';
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
+// @import '~bootstrap/dist/css/bootstrap.min.css';
 // @import 'theme';
