--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -18,8 +18,8 @@
     width: 400px;
   }
   .scroll-container {
-    max-height: 400px; /* Establece la altura máxima del contenedor de scroll */
-    overflow-y: auto; /* Agrega scroll vertical si es necesario */
+    max-height: 400px; 
+    overflow-y: auto; 
   }
   .chat-list {
     width: 50%;
