--- a/src/app/home/about/about.component.scss
+++ b/src/app/home/about/about.component.scss
@@ -24,8 +24,8 @@
   }
   .game-icon {
     // margin-right: 8px;
-    width: 40px; /* Tamaño mediano para las imágenes */
-    height: auto;  /* Tamaño mediano para las imágenes */
+    width: 40px; 
+    height: auto;  
   }
   .game-description {
     margin-left: 16px;
