--- a/src/app/games/slot/slot.component.scss
+++ b/src/app/games/slot/slot.component.scss
@@ -22,13 +22,13 @@
         border: 1px solid black;
         border-radius: 20%;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.9);
-        background-size: contain; /* Ajusta el tamaño de la imagen para que se ajuste completamente dentro del contenedor */
+        background-size: contain; 
         background-repeat: no-repeat; 
         padding: 10px;
         img {
-            width: 100%; // Ajusta el tamaño de la imagen al tamaño del contenedor
-            height: 100%; // Ajusta el tamaño de la imagen al tamaño del contenedor
-            object-fit: contain; // Mantiene la relación de aspecto de la imagen
+            width: 100%; 
+            height: 100%; 
+            object-fit: contain;
             padding: 10px;
           }
         // animation: slideAnimation 1s linear infinite;
