--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,64 +1,100 @@
 <div class="login-form-flex">
-    <mat-card>
-      <mat-card-header class="header-container">
-        <img mat-card-avatar style="margin-bottom: 0px;" src="../../../favicon.ico"  alt="Logo">
-        <!-- <img mat-card-avatar src="../../../assets/icons/account_circle.png"  alt="Logo"> -->
-        <mat-card-title class="header-title">Iniciar Sesión</mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-        <form [formGroup]="loginForm" (ngSubmit)="login()" (keypress.enter)="login()">
-            <div class="datos">
-                <mat-form-field style="min-width: 250px;" appearance="outline">
-                  <mat-label>Correo electrónico</mat-label>
-                  <input [(ngModel)]="userMail" matInput placeholder="ejemplo@email.com" formControlName="email" required>
-                  <mat-error *ngIf="loginForm.get('email')?.hasError('required')">
-                    El correo electrónico es obligatorio
-                  </mat-error>
-                  <mat-error *ngIf="loginForm.get('email')?.hasError('email')">
-                    Ingresa un correo electrónico válido
-                  </mat-error>
-                </mat-form-field>
-            </div>
-            
-            <div class="datos">
-                <mat-form-field   appearance="outline">
-                  <mat-label>Contraseña</mat-label>
-                  <input [(ngModel)]="userPWD" matInput [type]="hide ? 'password' : 'text'" formControlName="password" required>
-                  <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                    <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                  </button>
-                  <mat-error *ngIf="loginForm.get('password')?.hasError('required')">
-                    La contraseña es obligatoria
-                  </mat-error>
-                </mat-form-field>
-
-            </div>
-        </form>
-        <div style="display: flex; justify-content: center; align-items: center;" >  
-
-          <mat-progress-spinner color="warn" *ngIf="showSpinner" mode="indeterminate"></mat-progress-spinner>
-        </div>
-
-      </mat-card-content>
-      <mat-card-actions>
-        <div class="button-flex-container">
-          <button mat-raised-button color="warn" [disabled]="loginForm.invalid" (click)="login()">
-            Acceder
-          </button>
-        </div>
-      </mat-card-actions>
-      <div class="acceso-rapido">
-        <!-- <mat-card-title class="header-title">Acceso Rapido</mat-card-title> -->
-          <span style="font-size: 16px; margin-bottom: 5px; font-style: italic;">Acceso Rapido</span>
-          <mat-form-field color="accent">
-            <mat-label>Elige un usuario</mat-label>
-            <mat-select [(value)]="selected" (selectionChange)="autocomplete()">
-              <mat-option>Ninguno</mat-option>
-              <mat-option value="option1">Jugador 1</mat-option>
-              <mat-option value="option2">Jugador 2</mat-option>
-              <mat-option value="option3">Administrador</mat-option>
-            </mat-select>
+  <mat-card>
+    <mat-card-header class="header-container">
+      <img
+        mat-card-avatar
+        style="margin-bottom: 0px"
+        src="../../../favicon.ico"
+        alt="Logo"
+      />
+      <mat-card-title class="header-title">Iniciar Sesión</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <form
+        [formGroup]="loginForm"
+        (ngSubmit)="onSubmit()"
+        (keypress.enter)="onSubmit()"
+      >
+        <div class="datos">
+          <mat-form-field style="min-width: 250px" appearance="outline">
+            <mat-label>Correo electrónico</mat-label>
+            <input
+              matInput
+              placeholder="ejemplo@email.com"
+              formControlName="email"
+              required
+            />
+            <mat-error *ngIf="loginForm.get('email')?.hasError('required')">
+              El correo electrónico es obligatorio
+            </mat-error>
+            <mat-error *ngIf="loginForm.get('email')?.hasError('email')">
+              Ingresa un correo electrónico válido
+            </mat-error>
           </mat-form-field>
+        </div>
+
+        <div class="datos">
+          <mat-form-field appearance="outline">
+            <mat-label>Contraseña</mat-label>
+            <input
+              matInput
+              [type]="hide ? 'password' : 'text'"
+              formControlName="password"
+              required
+            />
+            <button
+              mat-icon-button
+              matSuffix
+              (click)="hide = !hide"
+              [attr.aria-label]="'Hide password'"
+              [attr.aria-pressed]="hide"
+            >
+              <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
+            </button>
+            <mat-error *ngIf="loginForm.get('password')?.hasError('required')">
+              La contraseña es obligatoria
+            </mat-error>
+          </mat-form-field>
+        </div>
+      </form>
+      <div style="display: flex; justify-content: center; align-items: center">
+        <mat-progress-spinner
+          color="warn"
+          *ngIf="showSpinner"
+          mode="indeterminate"
+        ></mat-progress-spinner>
       </div>
-    </mat-card>
-  </div>
+    </mat-card-content>
+    <mat-card-actions>
+      <div class="button-flex-container">
+        <button
+          mat-raised-button
+          color="warn"
+          [disabled]="loginForm.invalid"
+          (click)="onSubmit()"
+        >
+          Acceder
+        </button>
+      </div>
+    </mat-card-actions>
+    <div class="registrarse">
+      <span class="btn-registrar" (click)="abrirModalRegistro()"
+        >¿Aún no tienes una cuenta? Regístrate ahora</span
+      >
+    </div>
+    <div class="acceso-rapido">
+      <span style="font-size: 16px; margin-bottom: 5px; font-style: italic"
+        >Acceso Rapido</span
+      >
+      <mat-form-field color="accent">
+        <mat-label>Elige un usuario</mat-label>
+        <mat-select [(value)]="selected" (selectionChange)="autocomplete()">
+          <mat-option>Ninguno</mat-option>
+          <mat-option value="option1">Jugador 1</mat-option>
+          <mat-option value="option2">Jugador 2</mat-option>
+          <mat-option value="option3">Administrador</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+  </mat-card>
+</div>
