--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,64 +1,66 @@
 .login-form-flex {
-    padding-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: auto;
-    mat-card{
-        border-radius: 10px;
-        background-color: #f5f5f5;
-    }
-    background-color: #e35072 ;
-  }
-  
-  .header-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
-    flex-direction: column;
-  }
-//   .mat-card {
-//     width: 400px;
-//     padding: 30px;
-//     border-radius: 8px;
-//     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-//   }
-  
-  .mat-card-header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    // margin-bottom: 20px;
-  }
-  .acceso-rapido{
-    display: flex;
-    justify-content: center; 
-    align-items: center;
-    flex-direction: column;
-  }
-  .mat-card-avatar {
-    width: 80px;
-    height: 80px;
-  }
-  
-//   .mat-card-title {
-//     font-size: 24px;
-//     font-weight: bold;
-//   }
-  
-//   .mat-form-field {
-//     width: 100%;
-//     margin-bottom: 20px;
-//   }
+  padding-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: auto;
 
- .datos{
-    // background-color: wheat;
- }
-  .button-flex-container {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    margin-bottom: 15px;
+  mat-card {
+    border-radius: 10px;
+    background-color: #f5f5f5;
   }
-  
+
+  background-color: #e35072;
+}
+
+.header-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+  flex-direction: column;
+}
+
+.mat-card-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.acceso-rapido {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.mat-card-avatar {
+  width: 80px;
+  height: 80px;
+}
+
+.registrarse {
+  margin: 10px 15px;
+
+  .btn-registrar {
+    color: #53368b;
+  }
+
+  .btn-registrar:hover {
+    color: #e35072;
+    cursor: pointer;
+  }
+}
+
+.datos {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.button-flex-container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
