--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,20 +1,7 @@
-<div class="sidenav-header">
-  <!-- <img
-    [width]="profilePicSize()"
-    [height]="profilePicSize()"
-    src="../../../assets/icons/account_circle.png"
-    alt=""
-  /> -->
-  <!-- <div class="header-text" >
-    <h2>Usuario</h2>
-    <p>Name</p>
-  </div> -->
-</div>
-<mat-nav-list class="menu-list">
-  
 
-  
-  <a  mat-list-item class="menu-item" *ngFor="let item of menuItems()" [routerLink]="item.route" routerLinkActive="selected-menu-item" #rla="routerLinkActive" [activated]="rla.isActive">
+<mat-nav-list class="menu-list">
+  <a  mat-list-item class="menu-item" *ngFor="let item of menuItems()" [routerLink]="item.route" 
+  routerLinkActive="selected-menu-item" #rla="routerLinkActive" [activated]="rla.isActive">
     <div class="menu-item-content">  <mat-icon 
       [fontSet]="
               rla.isActive ? 'material-icons' : 'material-icons-outlined'
@@ -23,10 +10,3 @@
       <span *ngIf="!sideNavCollapsed()">{{ item.label }}</span></div>
   </a>
 </mat-nav-list>
-
-<!-- <mat-nav-list>matListItemIcon  matListItemTitle
-    <a class="menu-item" mat-list-item *ngFor="let item of menuItems" class="menu-item">
-      <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
-      <span matListItemTitle *ngIf="isExpanded">{{ item.name }}</span>
-    </a>
-  </mat-nav-list> -->
