--- a/src/app/components/sidenav/sidenav.component.scss
+++ b/src/app/components/sidenav/sidenav.component.scss
@@ -18,9 +18,6 @@
     }
   }
 }
-:host * {
-  // transition: all 500ms ease-in-out;
-}
 
 .hide-header-text {
   opacity: 0;
@@ -36,11 +33,16 @@
 }
 span{
   padding-left: 15px;
+  font-family: "Salsa";
 }
 .menu-item {
   display: flex;
   align-items: center;
     border-left: 5px solid;
+    span{
+
+      color: white;
+    }
     border-left-color: rgba(0, 0, 0, 0);
   }
   
