--- a/src/app/games/hangman/hangman.component.scss
+++ b/src/app/games/hangman/hangman.component.scss
@@ -3,18 +3,77 @@
     height: 200px;
 
 }
-.juego{
+.hangman{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    .perdedor{
+        justify-content: center;
+        text-align: center;
+    }
 }
-.botonera{
+.botones{
     display: flex;
     padding-bottom: 15px;
     margin-left: 15px;
     justify-content: space-between;
+    
 }
-.btn-row button{
+.palabra-oculta{
+    background-color: antiquewhite;
+    border-radius: 20px;
+    padding: 0 15px;
+    margin-bottom: 15px;
+}
+.botones button{
     margin: 5px;
+    -webkit-box-shadow: 1px 4px 30px 9px rgba(255,255,255,1);
+-moz-box-shadow: 1px 4px 30px 9px rgba(255,255,255,1);
+box-shadow: 1px 4px 30px 9px rgba(255,255,255,1);
+
 }
+.portada{
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    border: 2px solid #66489a;
+    border-radius: 20px;
+    padding-top: 10px;
+    margin-bottom: 15px;
+    background-color: antiquewhite;
+    //     h2{
+    //         background-color: antiquewhite;
+    // border-radius: 20px;padding: 0 15px;
+    //     }
+  // background-color: white;
+  // -webkit-box-shadow: 0px 10px 13px -2px rgba(112, 82, 163, 0.95);
+  // -moz-box-shadow: 0px 10px 13px -2px rgba(112, 82, 163, 0.95);
+  // box-shadow: 0px 10px 13px -2px rgba(112, 82, 163, 0.95);
+  -webkit-box-shadow: 1px 9px 101px -1px rgba(255,247,255,1);
+-moz-box-shadow: 1px 9px 101px -1px rgba(255,247,255,1);
+box-shadow: 1px 9px 101px -1px rgba(255,247,255,1);
+}
+
+@media screen and (max-width: 480px) {
+    .ahorcado-img{
+      width: 15rem;
+    }
+  
+    .teclado {
+      padding-top: 1rem;
+      .botones button{
+        margin: 1px;
+        }
+    }
+  
+    .boton {
+    //   padding: 0.7em 1.5em;
+      font-size: 10px;
+      width: 28px; 
+  height: 28px;
+    }
+  }
+  
