--- a/src/app/games/slot/slot.component.scss
+++ b/src/app/games/slot/slot.component.scss
@@ -1,48 +1,70 @@
 .slot-machine {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .reel {
     display: flex;
     justify-content: center;
-    align-items: center;
-    // flex-direction: row;
-    // border: 2px solid rgb(2, 2, 2);
-    // height: 400px;
-    // width: 400px;
-    .reel {
-    //   width: 50%;
-    //   height: 50%;
-    //   background-color: #ddd;
-      display: flex;
-      justify-content: center;
-    //   align-items: center;
-    //   overflow: hidden;
-    
-      .slot {
-        width: 220px;
-        height: 230px;
-        margin: 5px;
-        border: 1px solid black;
-        border-radius: 20%;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.9);
-        background-size: contain; 
-        background-repeat: no-repeat; 
+    // width: 200px;
+    height: 200px;
+    .slot {
+      // width: 150px;
+      // height: 150px;
+      margin: 0 10px;
+      border: 1px solid black;
+      border-radius: 10px;
+      -webkit-box-shadow: 1px 4px 30px 9px rgba(255,255,255,1);
+-moz-box-shadow: 1px 4px 30px 9px rgba(255,255,255,1);
+box-shadow: 1px 4px 30px 9px rgba(255,255,255,1);
+      // box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.9);
+      background-size: contain;
+      background-repeat: no-repeat;
+      padding: 10px;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
         padding: 10px;
-        img {
-            width: 100%; 
-            height: 100%; 
-            object-fit: contain;
-            padding: 10px;
-          }
-        // animation: slideAnimation 1s linear infinite;
       }
     }
   }
+}
+.titulo{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: auto;
+  padding: 10px 10px;
+}
+.botonera{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
 
-  .button-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin:20px;
-    button{
+}
+.button-container {
+  background-color: whitesmoke;
+  width: auto;
+  margin: 20px;
+  border-radius: 10px;
+  button {
+    margin: 15px;
+    margin-right: 10px;
+    width: 200px;
+    height: 40px;
+  }
+}
 
-        margin-right: 10px;
+@media screen and (max-width: 600px) {
+  .slot-machine {
+    .reel {
+      height: 100px;
     }
   }
+  .slot {
+    width: 50px;
+    height: 50px;
+    margin: 0 5px;
+  }
+}
