--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,34 +1,22 @@
-<mat-grid-list [cols]="gridCols" rowHeight="300px">
-    
-    <mat-grid-tile>
-        <!-- <img src="../../assets/gifs/slot.jpg" (mouseenter)="mostrarGif('../../assets/gifs/slot.gif')" (mouseleave)="ocultarGif()">
-        <img *ngIf="gifSeleccionado === juego.gif" [src]="juego.gif" alt="GIF"> -->
-        <div class="contenedor-imagen"  (mouseenter)="alternarGif()" (mouseleave)="alternarGif()" (click)="navegarAJuego('games/slot')">
-            <img [src]="mostrarGif ? gif : imagen" alt="Imagen">
-          </div>
-    </mat-grid-tile>
-    <mat-grid-tile>
-        <div class="contenedor-imagen"  (mouseenter)="alternarGif()" (mouseleave)="alternarGif()" (click)="navegarAJuego('games/hangman')">
-            <img [src]="mostrarGif ? gif : imagen2" alt="Imagen">
-          </div>
-    </mat-grid-tile>
-    <mat-grid-tile>
-        <div class="contenedor-imagen"  (mouseenter)="alternarGif()" (mouseleave)="alternarGif()" (click)="navegarAJuego('games/cards')">
-            <img [src]="mostrarGif ? gif : imagen3" alt="Imagen">
-          </div>
-    </mat-grid-tile>
-    <mat-grid-tile>
-        <div class="contenedor-imagen"  (mouseenter)="alternarGif()" (mouseleave)="alternarGif()" (click)="navegarAJuego('games/trivia')">
-            <img [src]="mostrarGif ? gif : imagen4" alt="Imagen">
-          </div>
-    </mat-grid-tile>
-  </mat-grid-list>
+<div class="container">
+  <div class="presentacion animate__animated animate__zoomInUp">
+    <div class="portada">
+      <img class="img" src="../../assets/img/games.png" alt="" />
+    </div>
 
-  <!-- <div class="row">
-    <div  (mouseenter)="alternarGif()" (mouseleave)="alternarGif()" (click)="navegarAJuego('games/slot')">
-        <img [src]="mostrarGif ? gif : imagen" alt="Imagen">
-      </div>
-      <div  (mouseenter)="alternarGif()" (mouseleave)="alternarGif()" (click)="navegarAJuego('games/slot')">
-        <img [src]="mostrarGif ? gif : imagen" alt="Imagen">
-      </div>
-  </div> -->
+    <div class="separator"></div>
+
+    <div class="texto">
+      <h1>TRABAJO PRÁCTICO N°1</h1>
+      <h4>Laboratorio 4 B - 2024</h4>
+      <button
+        class="about animate__animated animate__swing animate__infinite"
+        mat-flat-button
+        color="warn"
+        (click)="sobreMi()"
+      >
+        SOBRE MI
+      </button>
+    </div>
+  </div>
+</div>
