--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,15 +1,58 @@
-mat-grid-tile {
-    // background: lightblue;
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+
+  padding: 20px;
+
+  img {
+    max-width: 70%;
+    height: auto;
+    margin: 0 auto;
+    display: block;
   }
-  .contenedor-imagen {
-    width: 300px;
-    height: 250px;
-    overflow: hidden; 
-    border-radius: 20%;
-    // border: solid 4px red;
-  }
-  
-  .contenedor-imagen img {
+}
+
+.presentacion {
+  background-color: #fbe6eb;
+  display: flex;
+  flex-direction: column;
+  padding: 20px 0;
+  align-items: center;
+  justify-content: center;
+  width: 40%;
+  -webkit-box-shadow: 1px 9px 101px -1px rgba(255, 247, 255, 1);
+  -moz-box-shadow: 1px 9px 101px -1px rgba(255, 247, 255, 1);
+  box-shadow: 1px 9px 101px -1px rgba(255, 247, 255, 1);
+  border-radius: 20px;
+}
+
+.separator {
+  width: 100%;
+  height: 3px;
+  background-color: #ef98ac;
+  margin: 20px 0;
+}
+
+button:hover {
+  background-color: #e6e6e6;
+  color: black;
+}
+
+button {
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  transition: background-color 0.3s, transform 0.3s;
+}
+
+@media (max-width: 600px) {
+  .presentacion {
     width: 100%;
-    height: 100%;
   }
+}
