--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 // @import '@angular/material/prebuilt-themes/indigo-pink.css';
+// @import 'bootstrap/scss/bootstrap';
+// @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Salsa&display=swap');
 @import './theme/theme';
+html, body {
+    margin: 0;
+    padding: 0;
+  }
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: "Salsa";}
 // @import '~bootstrap/dist/css/bootstrap.min.css';
 // @import 'theme';
