subiendo game module

--- a/src/app/games/games.component.html
+++ b/src/app/games/games.component.html
@@ -1,20 +1,18 @@
-
-
 <div class="menu">
-    <div class="contenedor-imagen "  (click)="navegarAJuego('games/slot')">
-      <img [src]=" imagen" alt="Imagen">
-      <h1>Tragamonedas</h1>
+  <div class="contenedor-imagen" (click)="navegarAJuego('games/slot')">
+    <img [src]="imagen" alt="Imagen" />
+    <h1>Tragamonedas</h1>
   </div>
-<div class="contenedor-imagen"   (click)="navegarAJuego('games/hangman')">
-  <img [src]=" imagen2" alt="Imagen">
-  <h1>Ahorcado</h1>
-</div>
-<div class="contenedor-imagen"  (click)="navegarAJuego('games/cards')">
-  <img [src]=" imagen3" alt="Imagen">
-  <h1>Mayor o menor</h1>
-</div>
-<div class="contenedor-imagen"  (click)="navegarAJuego('games/trivia')">
-  <img [src]=" imagen4" alt="Imagen">
-  <h1>Preguntados</h1>
-</div>
+  <div class="contenedor-imagen" (click)="navegarAJuego('games/hangman')">
+    <img [src]="imagen2" alt="Imagen" />
+    <h1>Ahorcado</h1>
+  </div>
+  <div class="contenedor-imagen" (click)="navegarAJuego('games/cards')">
+    <img [src]="imagen3" alt="Imagen" />
+    <h1>Mayor o menor</h1>
+  </div>
+  <div class="contenedor-imagen" (click)="navegarAJuego('games/trivia')">
+    <img [src]="imagen4" alt="Imagen" />
+    <h1>Preguntados</h1>
+  </div>
 </div>
