--- a/src/app/games/games.component.scss
+++ b/src/app/games/games.component.scss
@@ -1,4 +1,3 @@
-
 .contenedor-imagen {
   width: 280px;
   height: 250px;
@@ -12,32 +11,25 @@
   align-items: center;
   border: 2px solid #66489a;
 
-  // background-color: white;
-  // -webkit-box-shadow: 0px 10px 13px -2px rgba(112, 82, 163, 0.95);
-  // -moz-box-shadow: 0px 10px 13px -2px rgba(112, 82, 163, 0.95);
-  // box-shadow: 0px 10px 13px -2px rgba(112, 82, 163, 0.95);
-  -webkit-box-shadow: 1px 9px 101px -1px rgba(255,247,255,1);
--moz-box-shadow: 1px 9px 101px -1px rgba(255,247,255,1);
-box-shadow: 1px 9px 101px -1px rgba(255,247,255,1);
+  -webkit-box-shadow: 1px 9px 101px -1px rgba(255, 247, 255, 1);
+  -moz-box-shadow: 1px 9px 101px -1px rgba(255, 247, 255, 1);
+  box-shadow: 1px 9px 101px -1px rgba(255, 247, 255, 1);
   margin: 20px 15px;
+
   h1 {
     background-color: #ffffff;
     font-size: 20px;
-    // color: white;
     text-align: center;
     letter-spacing: 2px;
-
     padding: 10px;
-    // margin: 5px 0;
     border-radius: 50px;
   }
+
   img {
-    // width: 80%;
     height: 80%;
   }
-  // background-color: #5F2C6E;
-  // border: solid 4px red;
 }
+
 .menu {
   display: flex;
   flex-direction: row;
@@ -45,20 +37,17 @@ box-shadow: 1px 9px 101px -1px rgba(255,247,255,1);
   align-items: center;
   margin-top: 20px;
 }
+
 .contenedor-imagen {
-  /* Estilos base del botón */
-  // margin: 0px;
-  transition: transform 0.3s; /* Agrega transición suave al cambio de escala */
+  transition: transform 0.3s;
 }
 
 .contenedor-imagen:hover {
-  /* Efecto de flotación */
-  transform: translateY(-20px); /* Mueve el botón hacia arriba */
+  transform: translateY(-20px);
 }
 
 .contenedor-imagen:active {
-  /* Efecto de agrandamiento al hacer clic */
-  transform: scale(1.1); /* Aumenta ligeramente el tamaño del botón */
+  transform: scale(1.1);
 }
 
 @media screen and (max-width: 480px) {
@@ -68,6 +57,7 @@ box-shadow: 1px 9px 101px -1px rgba(255,247,255,1);
     justify-content: center;
     align-items: center;
   }
+
   .contenedor-imagen {
     display: flex;
     align-items: center;
@@ -76,9 +66,5 @@ box-shadow: 1px 9px 101px -1px rgba(255,247,255,1);
     padding-top: 20px;
     width: 200px;
     height: 200px;
-    // img {
-    //   width: 200px;
-    //   height: 200px;
-    // }
   }
 }
