subiendo slot corregido

--- a/src/app/games/slot/slot.component.html
+++ b/src/app/games/slot/slot.component.html
@@ -1,21 +1,26 @@
 <div class="titulo">
-  <h1 style="text-align: center; background-color: whitesmoke; padding: 12px; border-radius: 10px;">
+  <h1 style="
+      text-align: center;
+      background-color: whitesmoke;
+      padding: 12px;
+      border-radius: 10px;
+    ">
     MAQUINA TRAGAMONEDAS
   </h1>
-
 </div>
 
 <div class="slot-machine">
   <div class="reel" *ngFor="let reel of reels">
-    <img class="slot" [src]="reel.currentImage" alt="">
+    <img class="slot" [src]="reel.currentImage" alt="" />
   </div>
 </div>
 <div class="botonera">
-
-  <div class="button-container ">
-    <button mat-flat-button color="accent" (click)="startSpinning()" [disabled]="start">
+  <div class="button-container">
+    <button mat-flat-button color="accent" (click)="girarReel()" [disabled]="start">
       Girar
     </button>
-    <button mat-flat-button color="warn" (click)="stopInterval()" [disabled]="!start">Detener</button>
+    <button mat-flat-button color="warn" (click)="detenerReel()" [disabled]="!start">
+      Detener
+    </button>
   </div>
 </div>
