--- a/src/app/games/slot/slot.component.scss
+++ b/src/app/games/slot/slot.component.scss
@@ -2,24 +2,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
   .reel {
     display: flex;
     justify-content: center;
-    // width: 200px;
     height: 200px;
+
     .slot {
-      // width: 150px;
-      // height: 150px;
       margin: 0 10px;
       border: 1px solid black;
       border-radius: 10px;
-      -webkit-box-shadow: 1px 4px 30px 9px rgba(255,255,255,1);
--moz-box-shadow: 1px 4px 30px 9px rgba(255,255,255,1);
-box-shadow: 1px 4px 30px 9px rgba(255,255,255,1);
-      // box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.9);
+      -webkit-box-shadow: 1px 4px 30px 9px rgba(255, 255, 255, 1);
+      -moz-box-shadow: 1px 4px 30px 9px rgba(255, 255, 255, 1);
+      box-shadow: 1px 4px 30px 9px rgba(255, 255, 255, 1);
       background-size: contain;
       background-repeat: no-repeat;
       padding: 10px;
+
       img {
         width: 100%;
         height: 100%;
@@ -29,25 +28,28 @@ box-shadow: 1px 4px 30px 9px rgba(255,255,255,1);
     }
   }
 }
-.titulo{
+
+.titulo {
   display: flex;
   align-items: center;
   justify-content: center;
   width: auto;
   padding: 10px 10px;
 }
-.botonera{
+
+.botonera {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 15px;
-
 }
+
 .button-container {
   background-color: whitesmoke;
   width: auto;
   margin: 20px;
   border-radius: 10px;
+
   button {
     margin: 15px;
     margin-right: 10px;
@@ -62,6 +64,7 @@ box-shadow: 1px 4px 30px 9px rgba(255,255,255,1);
       height: 100px;
     }
   }
+
   .slot {
     width: 50px;
     height: 50px;
