subiendo components corregido

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,12 +1,21 @@
-
 <mat-nav-list class="menu-list">
-  <a  mat-list-item class="menu-item" *ngFor="let item of menuItems()" [routerLink]="item.route" 
-  routerLinkActive="selected-menu-item" #rla="routerLinkActive" [activated]="rla.isActive">
-    <div class="menu-item-content">  <mat-icon 
-      [fontSet]="
-              rla.isActive ? 'material-icons' : 'material-icons-outlined'
-            "
-            matListItemIcon color="warn">{{ item.icon }}</mat-icon>
-      <span *ngIf="!sideNavCollapsed()">{{ item.label }}</span></div>
+  <a
+    mat-list-item
+    class="menu-item"
+    *ngFor="let item of menuItems()"
+    [routerLink]="item.route"
+    routerLinkActive="selected-menu-item"
+    #rla="routerLinkActive"
+    [activated]="rla.isActive"
+  >
+    <div class="menu-item-content">
+      <mat-icon
+        [fontSet]="rla.isActive ? 'material-icons' : 'material-icons-outlined'"
+        matListItemIcon
+        color="warn"
+        >{{ item.icon }}</mat-icon
+      >
+      <span *ngIf="!sideNavCollapsed()">{{ item.label }}</span>
+    </div>
   </a>
 </mat-nav-list>
