--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -1,106 +1,103 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 16px;
-  }
-  mat-card-header, mat-card-subtitle{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .game-card, .creator-card {
-    width: 100%;
-    max-width: 600px;
-    margin-bottom: 16px;
-  }
-  .mat-list-item {
-    display: flex;
-    align-items: center;
-    // margin-bottom: 30px;
-  }
-  .game-title {
-    font-weight: bold;
-  }
-  .game-icon {
-    // margin-right: 8px;
-    width: 40px; 
-    height: auto;  
-  }
-  .game-description {
-    margin-left: 16px;
-    padding-bottom: 10px;
-  }
-  
-  @media (max-width: 600px) {
-    .game-description {
-        margin-left: 24px;
-    }
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 16px;
+}
 
-  // .container {
-  //   max-width: 800px;
-  //   // margin: 0 auto;
-  //   padding: 20px;
+mat-card-header,
+mat-card-subtitle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-  // }
-  
+.game-card,
+.creator-card {
+  width: 100%;
+  max-width: 600px;
+  margin-bottom: 16px;
+}
+
+.mat-list-item {
+  display: flex;
+  align-items: center;
+}
+
+.game-title {
+  font-weight: bold;
+}
+
+.game-icon {
+  width: 40px;
+  height: auto;
+}
+
+.game-description {
+  margin-left: 16px;
+  padding-bottom: 10px;
+}
+
+.quien-soy {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 20px 0;
+  margin: 20px;
+}
+
+.foto {
+  flex: 1;
+  margin-left: 20px;
+}
+
+.info {
+  flex: 2;
+}
+
+.alumno-image {
+  max-width: 150px;
+  height: auto;
+  border-radius: 50%;
+}
+
+.sobre-juego,
+.info {
+  margin: 0 40px;
+}
+
+.separator {
+  width: 100%;
+  height: 3px;
+  background-color: #ef98ac;
+  margin: 20px 0;
+}
+
+.quien-soy {
+  background-color: #fbe6eb;
+  display: flex;
+  flex-direction: row;
+  padding: 20px 0;
+  align-items: center;
+  justify-content: center;
+  max-width: 600px;
+  -webkit-box-shadow: 1px 9px 101px -1px rgba(255, 247, 255, 1);
+  -moz-box-shadow: 1px 9px 101px -1px rgba(255, 247, 255, 1);
+  box-shadow: 1px 9px 101px -1px rgba(255, 247, 255, 1);
+  border-radius: 20px;
+}
+
+@media (max-width: 600px) {
   .quien-soy {
-    display: flex;
-    align-items: center;
-    // margin-bottom: 20px;
-    flex-wrap: wrap;
-    padding: 20px 0;
-    margin: 20px;
-  }
-  
-  .foto {
-    flex: 1;
-    margin-left: 20px;
-  }
-  
-  .info {
-    flex: 2;
-  }
-  
-  .alumno-image {
-    max-width: 150px;
-    height: auto;
-    border-radius: 50%;
-  }
-  
-  .sobre-juego, .info {
-    margin:  0 40px;
-  }
-  .separator{
     width: 100%;
-    height: 3px;
-    background-color: #ef98ac;
-    margin: 20px 0;
   }
 
-  .quien-soy{
-    background-color: #fbe6eb;
-    display: flex;
-    flex-direction: row;
-    padding: 20px 0;
-    align-items: center;
-    justify-content: center;
-    max-width: 600px;
-//     -webkit-box-shadow: 7px 12px 43px -4px rgba(197, 184, 219, 0.95);
-// -moz-box-shadow: 7px 12px 43px -4px rgba(197, 184, 219,0.95);
-// box-shadow: 7px 12px 43px -4px rgba(197, 184, 219,0.95);
--webkit-box-shadow: 1px 9px 101px -1px rgba(255,247,255,1);
--moz-box-shadow: 1px 9px 101px -1px rgba(255,247,255,1);
-box-shadow: 1px 9px 101px -1px rgba(255,247,255,1);
-border-radius: 20px;
+  .foto {
+    flex: none;
   }
-  @media (max-width: 600px) {
-    .quien-soy{
-      width: 100%;
-    }
-    .foto{
-      flex: none;
-    }
+
+  .game-description {
+    margin-left: 24px;
   }
+}
