subiendo login/register arreglado

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -88,7 +88,7 @@
       >
       <mat-form-field color="accent">
         <mat-label>Elige un usuario</mat-label>
-        <mat-select [(value)]="selected" (selectionChange)="autocomplete()">
+        <mat-select [(value)]="selected" (selectionChange)="autocompletar()">
           <mat-option>Ninguno</mat-option>
           <mat-option value="option1">Jugador 1</mat-option>
           <mat-option value="option2">Jugador 2</mat-option>
