--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,54 +1,51 @@
 <div class="login-form-flex">
   <mat-card>
     <mat-card-header class="header-container">
-      <img mat-card-avatar style="margin-bottom: 0px;" src="../../../favicon.ico"  alt="Logo">
-      <!-- <img mat-card-avatar src="../../../assets/icons/account_circle.png"  alt="Logo"> -->
+      <img mat-card-avatar style="margin-bottom: 0px" src="../../../favicon.ico" alt="Logo" />
       <mat-card-title class="header-title">Crear nuevo usuario</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" (keypress.enter)="onSubmit()">
         <div class="datos">
-          <mat-form-field style="min-width: 250px;" appearance="outline">
+          <mat-form-field style="min-width: 250px" appearance="outline">
             <mat-label>Nombre</mat-label>
-            <input matInput placeholder="gamer123" formControlName="name" required>
+            <input matInput placeholder="gamer123" formControlName="name" required />
             <mat-error *ngIf="registerForm.get('email')?.hasError('required')">
               El nombre es obligatorio
             </mat-error>
           </mat-form-field>
         </div>
 
-          <div class="datos">
-              <mat-form-field style="min-width: 250px;" appearance="outline">
-                <mat-label>Correo electrónico</mat-label>
-                <input matInput placeholder="ejemplo@email.com" formControlName="email" required>
-                <mat-error *ngIf="registerForm.get('email')?.hasError('required')">
-                  El correo electrónico es obligatorio
-                </mat-error>
-                <mat-error *ngIf="registerForm.get('email')?.hasError('email')">
-                  Ingresa un correo electrónico válido
-                </mat-error>
-              </mat-form-field>
-          </div>
-          
-          <div class="datos">
-              <mat-form-field   appearance="outline">
-                <mat-label>Contraseña</mat-label>
-                <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" required>
-                <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                  <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                </button>
-                <mat-error *ngIf="registerForm.get('password')?.hasError('required')">
-                  La contraseña es obligatoria
-                </mat-error>
-              </mat-form-field>
+        <div class="datos">
+          <mat-form-field style="min-width: 250px" appearance="outline">
+            <mat-label>Correo electrónico</mat-label>
+            <input matInput placeholder="ejemplo@email.com" formControlName="email" required />
+            <mat-error *ngIf="registerForm.get('email')?.hasError('required')">
+              El correo electrónico es obligatorio
+            </mat-error>
+            <mat-error *ngIf="registerForm.get('email')?.hasError('email')">
+              Ingresa un correo electrónico válido
+            </mat-error>
+          </mat-form-field>
+        </div>
 
-          </div>
+        <div class="datos">
+          <mat-form-field appearance="outline">
+            <mat-label>Contraseña</mat-label>
+            <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" required />
+            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+              [attr.aria-pressed]="hide">
+              <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
+            </button>
+            <mat-error *ngIf="registerForm.get('password')?.hasError('required')">
+              La contraseña es obligatoria
+            </mat-error>
+          </mat-form-field>
+        </div>
       </form>
-      <div style="display: flex; justify-content: center; align-items: center;" >  
-
+      <div style="display: flex; justify-content: center; align-items: center">
         <mat-progress-spinner color="warn" *ngIf="showSpinner" mode="indeterminate"></mat-progress-spinner>
       </div>
-
     </mat-card-content>
     <mat-card-actions>
       <div class="button-flex-container">
